# open-house

./: Cargo.toml  users.db
src/: content_access.rs  customize.rs  friends.rs  invite.rs  login.rs  main.rs  register.rs  user.rs
static/: 403.html  404.html  500.html  index.html  scripts.js  styles.css
user_pages/: default_page.html  default_scripts.js  default_styles.css
