[package]
name = "gallery"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = { version = "0.8", features = ["std"] }
sha2 = "0.10"
base64 = "0.13"
lazy_static = "1.4"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite", "macros"] }
actix-files = "0.6.6"
argon2 = "0.4"
regex = "1.11.0"


